--- a/themes/imbigo-theme/layouts/_default/baseof.html
+++ b/themes/imbigo-theme/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="{{ "images/favicon.ico" | relURL }}">
+    <link rel="icon" type="image/x-icon" href="{{ "img/favicon.ico" | relURL }}">
 </head>
 <body>
     {{ partial "header.html" . }}
