--- a/themes/imbigo-theme/layouts/_default/baseof.html
+++ b/themes/imbigo-theme/layouts/_default/baseof.html
@@ -12,6 +12,17 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{{ "img/favicon.ico" | relURL }}">
+    
+    <!-- Google Analytics -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KW5VZSYX44"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-KW5VZSYX44');
+    </script>
 </head>
 <body>
     {{ partial "header.html" . }}
